[metadata]
name = py_measure

[options]
python_requires = >=3.8
include_package_data = True
packages = find_namespace:
install_requires =
    setuptools

[options.extras_require]
test =
    pytest
dev =
    coverage
    black
    flake8
    isort
    mypy
docs =
    sphinx
    myst-parser

[options.packages.find]
include =
    py_measure

[flake8]
max-line-length = 120
extend-ignore = E203
include = src,test
exclude = docs
max-complexity = 10